<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:padding="8dp"
        android:src="@drawable/pic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081"
        app:layout_constraintVertical_weight="1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/zoya_khanam"
        android:textColor="@color/black"
        android:textSize="30sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.041" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:padding="8dp"
        android:text="@string/software_engineer"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.044"
        app:layout_constraintVertical_weight="1" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.794"
        app:layout_constraintVertical_weight="1">

        <Button
            android:id="@+id/skills"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/skills"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="520dp" />


        <Button
            android:id="@+id/edu"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/education"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="225dp"
            tools:layout_editor_absoluteY="436dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.272"
        app:layout_constraintVertical_weight="1">

        <Button
            android:id="@+id/projects"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/projects"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="225dp"
            tools:layout_editor_absoluteY="520dp" />

        <Button
            android:id="@+id/work"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/work"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="436dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>