<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Graduation"
        android:layout_marginTop="100dp"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/baderia_global_institute_of_engineering_and_management"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="Higher Secondary"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/twelfth"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="normal"
       />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="High School"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
   />

    <TextView
        android:id="@+id/ten"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tenth"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="normal" />
</LinearLayout>
</ScrollView>